--- a/game-shop-api/package.json
+++ b/game-shop-api/package.json
@@ -3,12 +3,18 @@
   "version": "1.0.0",
   "description": "Game shop api written in nodejs",
   "main": "app.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "author": "Aleksandar Krstic",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^6.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
