--- a/game-shop-api/package.json
+++ b/game-shop-api/package.json
@@ -11,6 +11,7 @@
   "author": "Aleksandar Krstic",
   "license": "ISC",
   "dependencies": {
+    "awilix": "^10.0.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
